New entries should be added at the top

2005-02-24 colors.py change ColorConverter.to_rgb() so it always returns rgb 
           (and not rgba), allow cnames keys to be cached, change the exception
           raised from RuntimeError to ValueError (like hex2color())
	   hex2color() use a regular expression to check the color string is
           valid  - SC

2005-02-23 Added rc param ps.useafm so backend ps can use native afm
           fonts or truetype.  afme breaks mathtext but causes much
           smaller font sizes and may result in images that display
           better in some contexts (eg pdfs incorporated into latex
           docs viewed in acrobat reader).  I would like to extend
           this approach to allow the user to use truetype only for
           mathtext, which should be easy.

2005-02-23 Used sequence protocol rather than tuple in agg collection
           drawing routines for greater flexibility - JDH


===========================================================
2005-02-22 0.72.1 released

2005-02-21 fixed linestyles for collections -- contour now dashes for
           levels <0

2005-02-21 fixed ps color bug - JDH

2005-02-15 fixed missing qt file

2005-02-15 banished error_msg and report_error.  Internal backend
           methods like error_msg_gtk are preserved.  backend writers,
           check your backends, and diff against 0.72 to make sure I
           did the right thing! - JDH


2005-02-14 Added enthought traits to matplotlib tree - JDH

===========================================================

2005-02-14 0.72 released

2005-02-14 fix bug in cbook alltrue() and onetrue() - SC

2005-02-11 updated qtagg backend from Ted - JDH

2005-02-11 matshow fixes for figure numbering, return value and docs - FP

2005-02-09 new zorder example for fine control in zorder_demo.py - FP

2005-02-09 backend renderer draw_lines now has transform in backend,
           as in draw_markers; use numerix in _backend_agg, aded small