@@ -1,4 +1,4 @@
-#!/usr/bin/env python2.3
+#!/usr/bin/env python
 """
 A simple example of an animated plot in matplotlib.  You can test the
 speed of animation of various backends by running the script with the
